# PersonRecognition

./: .gitignore  README.md
PythonScripts/: file_streamer.py  frame_creator.py  main.py  user_tracker.py  video_capture.py
python_scripts/: FaceDetector.py  baseline.py  face_detector.py  feature_combiner.py  frame_creator.py  main.py  pattern_recognizer.py  user_tracker.py  video_capture.py
python_scripts/dataset/: data_2.txt
src/cob_openni2_tracker/: CMakeLists.txt
src/cob_openni2_tracker/ros/include/cob_openni2_tracker/: body_tracker.h~
src/openni_tracker/: CMakeLists.txt  README.md  README.md~  package.xml  package.xml~  setup_nite.bash
src/openni_tracker/launch/: tracker.launch
src/openni_tracker/msg/: TrackerUserArray.msg
src/openni_tracker/src/: kinect_tracker.cpp  tracker.cpp
